# phasma_description

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: display_urdf.rviz
launch/: load.launch  load.py  view_urdf.launch  view_urdf.py
urdf/: phasma.urdf  phasma.urdf.xacro
urdf/calibrations/: 20220322_calibration.yaml
urdf/meshes/: phasma_body.dae
